--- a/spring-cglib/build.gradle
+++ b/spring-cglib/build.gradle
@@ -19,5 +19,6 @@ dependencies {
     compile "org.mybatis:mybatis:3.4.5"
     compile project (':spring-context')
     compile project (':spring-jdbc')
+    optional("org.aspectj:aspectjweaver:${aspectjVersion}")
     testCompile group: 'junit', name: 'junit', version: '4.12'
 }
